# wows-replays

./: .gitignore  CLAUDE.md  Cargo.toml
analysis/: Cargo.toml
analysis/src/: damage_trails.rs  trails.rs
idxpkg/: Cargo.toml
minimap-renderer/: Cargo.toml
minimap-renderer/src/: advantage.rs  assets.rs  config.rs  draw_command.rs  drawing.rs  lib.rs  main.rs  map_data.rs  renderer.rs  video.rs
parser/: Cargo.toml
parser/src/: error.rs  game_constants.rs  game_params.rs  lib.rs  nested_property_path.rs  packet2.rs  types.rs  wowsreplay.rs
parser/src/analyzer/: analyzer.rs  chat.rs  decoder.rs  packet_dump.rs  summary.rs  survey.rs
parser/src/analyzer/battle_controller/: controller.rs  listener.rs  mod.rs  observer.rs  state.rs  timeline.rs
replayserver/: Cargo.toml
replayserver/src/: main.rs
replayshark/: Cargo.toml
replayshark/src/: main.rs
