[package]
name = "minimap_renderer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "minimap_renderer"

[[bin]]
name = "minimap_renderer"
path = "src/main.rs"

[dependencies]
wows_replays = { path = "../parser" }
wowsunpack = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
openh264 = { version = "0.9", features = ["source"] }
mp4 = "0.14"
bytes = "1"
clap = "2.33.1"
anyhow = "1.0"
convert_case = "0.6"
roxmltree = "0.19"
resvg = "0.44"
tiny-skia = "0.11"
