[package]
name = "wows_minimap_renderer"
version = "0.2.0"
edition = "2024"
publish = true
description = """
Library/CLI application for rendering World of Warships replay files as a minimap render
""""
license = "MIT"

[lib]
name = "wows_minimap_renderer"

[[bin]]
name = "minimap_renderer"
path = "src/main.rs"

[features]
default = ["gpu", "arc"]
gpu = ["dep:vk-video", "dep:wgpu", "dep:yuvutils-rs"]
cpu = ["dep:openh264"]
arc = ["wows_replays/arc"]

[dependencies]
wows_replays = { version = "0.13"  }
wowsunpack = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
mp4 = "0.14"
bytes = "1"
clap = "2.33.1"
anyhow = "1.0"
convert_case = "0.6"
gettext = "0.4"
roxmltree = "0.19"
resvg = "0.44"
tiny-skia = "0.11"

# GPU encoder (default)
vk-video = { version = "0.2", optional = true }
wgpu = { version = "28", optional = true }
yuvutils-rs = { version = "0.8", optional = true }

# CPU encoder (non-default)
openh264 = { version = "0.9", features = ["source"], optional = true }
