[package]
name = "wows_minimap_renderer"
version = "0.4.0"
edition = "2024"
publish = true
description = """
Library/CLI application for rendering World of Warships replay files as a minimap render
""""
license = "MIT"

[lib]
name = "wows_minimap_renderer"

[[bin]]
name = "minimap_renderer"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin", "gpu", "arc"]
bin = ["dep:clap", "dep:gettext", "dep:toml"]
gpu = ["dep:vk-video", "dep:wgpu", "dep:yuvutils-rs"]
cpu = ["dep:openh264"]
arc = ["wows_replays/arc"]

[dependencies]
wows_replays = { version = "0.14", path = "../parser" }
wowsunpack = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
mp4 = "0.14"
bytes = "1"
clap = { version = "2.33.1", optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
convert_case = "0.6"
gettext = { version = "0.4", optional = true }
roxmltree = "0.19"
resvg = "0.44"
tiny-skia = "0.11"

# GPU encoder (default)
vk-video = { version = "0.2", optional = true }
wgpu = { version = "28", optional = true }
yuvutils-rs = { version = "0.8", optional = true }

# CPU encoder (non-default)
openh264 = { version = "0.9", features = ["source"], optional = true }
rootcause = "0.12.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.22"
